--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <string name="agi">Ловкость</string>
     <string name="str">Сила</string>
     <string name="intel">Интеллект</string>
+    <string name="start">Start Items</string>
+    <string name="early">Early Items</string>
+    <string name="mid">Mid Items</string>
+    <string name="late">Late Items</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
